# dekube-cli

./:  README.md  .gitignore  Cargo.toml  README.md  dekube.db
src/: lib.rs  main.rs  upload.rs
test_project/: Dockerfile  index.js  package-lock.json
tests/: cli.rs
