[package]
name = "dekube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
